feat: Introduce environment detection and module enablement system
- Added FulcrumEnvironment class for managing environment state and module enablement checks.
- Implemented FulcrumBootstrapper to initialize environment detection and configuration loading.
- Created EnvironmentConfig and EnvironmentConfigParser for handling environment.yml configurations.
- Developed ModuleEnvironmentRegistry to manage module enablement based on environment settings.
- Refactored ModuleManager to support new module loading and discovery process.
- Updated ModuleListCommand to utilize the new FulcrumEnvironment for environment information.
- Added tests for environment configuration parsing, module enablement, and legacy compatibility.